tests/NormalTests/paczka1/fuzzy1/79673375.err
Error in line 11: J74SHZC A42 14,9
Error in line 15: J74SHZC A156 77,3
